finally auth done and fixed bugs also made leave remaing visible

--- a/src/app/Components/header/header.component.css
+++ b/src/app/Components/header/header.component.css
@@ -15,3 +15,7 @@ nav {
   /* background-color: orange; */
   border-radius: 30%;
 }
+
+#logo {
+  cursor: pointer;
+}
